--- a/0x00-Webpack/task_1/public/index.html
+++ b/0x00-Webpack/task_1/public/index.html
@@ -6,6 +6,6 @@
     <title>task-1 thomas kitaba</title>
 </head>
 <body>
-    <script type="text/javascript" src="bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
