--- a/0x00-Webpack/task_1/public/index.html
+++ b/0x00-Webpack/task_1/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Debounce</title>
+    <title>task-1 thomas kitaba</title>
 </head>
 <body>
-  <script type="text/javascript" src="bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
