--- a/0x00-Webpack/task_2/public/index.html
+++ b/0x00-Webpack/task_2/public/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>task-2 load image thomas kitaba</title>
+    <title>Adding CSS & Images</title>
 </head>
 <body>
-    <script src="bundle.js"></script>
+    
+
+
+    <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
